--- a/package.yaml
+++ b/package.yaml
@@ -8,7 +8,6 @@ copyright:           "2020 Author name here"
 
 extra-source-files:
 - README.md
-- ChangeLog.md
 
 # Metadata used when publishing your package
 # synopsis:            Short description of your package
@@ -26,6 +25,8 @@ dependencies:
 - transformers
 - mtl
 - unix
+- reactive-banana
+- random
 
 library:
   source-dirs: src
